--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -174,7 +174,7 @@ queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛ
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_8 : "<b>{0} ᴘʟᴀʏᴇʀ</b>\n\n🎄 <b>sᴛʀᴇᴀᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "**➜ <b>𝗦𝗧𝗔𝗥𝗧𝗘𝗗 𝗦𝗧𝗥𝗘𝗔𝗠𝗜𝗡𝗚 ⿕</b> **\n\n**࿃─────┤sᴏɴɢ ⚚ ɪɴғᴏ├─────࿃**\n\n**<b>➲ ᴛɪᴛʟᴇ ▸</b> <a href={0}>{1}</a> **\n**<b>➲ ᴅᴜʀᴀᴛɪᴏɴ ▸</b> {2} ᴍɪɴᴜᴛᴇs **\n**<b>➲ ʙʏ ▸</b> {3} **\n\n**⎉───────────────────⎉**"
+stream_1 : "**➜ <b>𝗦𝗧𝗔𝗥𝗧𝗘𝗗 𝗦𝗧𝗥𝗘𝗔𝗠𝗜𝗡𝗚 ⿕</b> **\n\n**࿃─────┤sᴏɴɢ ⚚ ɪɴғᴏ├─────࿃**\n\n**<b>➲ ᴛɪᴛʟᴇ ▸</b> <a href={0}>{1}</a> **\n**<b>➲ ᴅᴜʀᴀᴛɪᴏɴ ▸</b> {2} ᴍɪɴᴜᴛᴇs **\n**<b>➲ ʙʏ ▸</b> {3} **\n\n**⎉───────────────────⎉**\n๏ ᴍᴀᴅᴇ ʙʏ ➛ [🇸ᴀ ɴ ᴀ ᴛ ᴀ ɴ ɪ ₰](https://t.me/all_sanatani_bot)"
 stream_2 : "➜ <b>𝗦𝗧𝗔𝗥𝗧𝗘𝗗 𝗦𝗧𝗥𝗘𝗔𝗠𝗜𝗡𝗚 🍹</b>\n\n<b>[🍬]ѕтʀєαм туρ :</b>🎫 ℓινєѕтʀєαм [ 𝖴𝗋𝗅 ]\n<b>[🪩] ʀєqυєѕтє∂ ву :</b> {0}"
 
 
