--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -168,7 +168,7 @@ ping_2 : "{1}\n\n⌾ ᴘɪɴɢ..ᴩᴏɴɢ : {0}ᴍs..\n\n➻ sʏsᴛᴇᴍ sᴛ
 queue_1 : "◎ ғᴇᴛᴄʜɪɴɢ ǫᴜᴇᴜᴇ...\n\nᴘʟᴇᴀsᴇ ᴡᴀɪᴛ..."
 queue_2 : "◎ ǫᴜᴇᴜᴇ ᴇᴍᴘᴛʏ."
 queue_3 : "<u>◎ ᴄʟɪᴄᴋ ʜᴇʀᴇ ᴛᴏ ᴄʜᴇᴄᴋ ᴛʜᴇ ʟɪsᴛ ᴏғ ᴛʜᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋs :</u> <a href={0}>ʜᴇʀᴇ</a>"
-queue_4 : "**➲ <b>𝗔𝗗𝗗𝗘𝗗 𝗧𝗢 𝗤𝗨𝗘𝗨𝗘 𝗔𝗧 #{0} **\n\n**࿃───☵ ɴᴇxᴛ  sᴏɴɢ  ɪɴғᴏ ☵───࿃**\n\n**⊙ ᴛɪᴛʟᴇ :</b> {1} **\n**<b>⊙ ᴅᴜʀᴀᴛɪᴏɴ :</b> {2} ᴍɪɴᴜᴛᴇs **\n**<b>⊙ ʙʏ :</b> {3} **\n\n**⎉───────────────────⎉ **"
+queue_4 : "**࿃───☵ ɴᴇxᴛ  sᴏɴɢ  ɪɴғᴏ ☵───࿃**\n\n**⦿ ᴛɪᴛʟᴇ ▸</b> {1} **\n**<b>⦿ ᴅᴜʀᴀᴛɪᴏɴ ▸</b> {2} ᴍɪɴᴜᴛᴇs **\n**<b>⦿ ʙʏ ▸</b> {3} **\n\n**       ⦿ ɴᴇxᴛ sᴏɴɢ ᴄᴏᴜɴᴛɪɴɢ #1 ⦿**\n\n**╭────────────────────╮ **\n**⦿┤ ᴍᴀᴅᴇ ʙʏ  ➛ [🇸ᴀ ɴ ᴀ ᴛ ᴀ ɴ ɪ](https://t.me/all_sanatani_bot)  ├⦿ **\n**╰────────────────────╯**"
 queue_5 : "ᴛʜᴇʀᴇ's ᴏɴʟʏ ᴏɴᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋ ɪɴ ᴘʟᴀʏʟɪsᴛ.\n\nᴀᴅᴅ ᴍᴏʀᴇ ᴛʀᴀᴄᴋs ᴛᴏ ᴄʜᴇᴄᴋ ʟɪsᴛ."
 queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛɪᴏɴ sᴛʀᴇᴀᴍ\n\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
