--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -184,15 +184,15 @@ NEXT_PAGE: "▷"
 BACK_PAGE: "◁"
 
 
-S_B_1 : "• ᴀᴅᴅ ᴍᴇ •️"
-S_B_2 : "• sᴜᴘᴘᴏʀᴛ •"
-S_B_3 : "• ᴀᴅᴅ ᴍᴇ ʙᴀʙʏ •️"
-S_B_4 : "• ʜᴇʟᴘ ᴀᴍᴅ ᴄᴏᴍᴍᴀɴᴅ •"
-S_B_5 : "• ᴏᴡɴᴇʀ •"
-S_B_6 : "• ᴜᴘᴅᴀᴛᴇ •"
-S_B_7 : "• sᴏᴜʀᴄᴇ •"
-S_B_8 : "• ʏᴏᴜ-ᴛᴜʙᴇ •"
-S_B_9 : "• sᴜᴘᴘᴏʀᴛ •"
+S_B_1 : "⊚ ᴧᴅᴅ ᴍᴇ ʙᴧʙʏ ⊚"
+S_B_2 : "⌯ sᴜᴘᴘᴏʀᴛ ⌯"
+S_B_3 : "⊚ ᴧᴅᴅ ᴍᴇ ᴛᴏ ʏᴏᴜʀ ᴄʜᴧᴛ ⊚"
+S_B_4 : "⌯ ʜᴇʟᴘ ᴧɴᴅ ᴄᴏᴍᴍᴧɴᴅs ⌯"
+S_B_5 : "⌯ ᴏᴡɴᴇʀ ⌯"
+S_B_6 : "⌯ ᴜᴘᴅᴧᴛᴇ ⌯"
+S_B_7 : "⌯ sᴏᴜʀᴄᴇ  ⌯"
+S_B_8 : "⌯ ʏᴏᴜᴛᴜʙᴇ  ⌯"
+S_B_9 : "⌯ sᴜᴘᴘᴏʀᴛ ⌯"
 
 H_B_1 : "ᴀᴅᴍɪɴ"
 H_B_2 : "ᴀᴜᴛʜ"
