--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -85,7 +85,7 @@ admin_39 : "❖ ʀᴇᴍᴏᴠᴇᴅ 1 ᴜᴘᴠᴏᴛᴇ."
 admin_40 : "❖ ᴜᴘᴠᴏᴛᴇᴅ."
 
 start_1 : "**❖ {0} **\n **⌾ ɪs ᴀʟɪᴠᴇ .**\n\n<b>**⌾ ᴜᴘᴛɪᴍᴇ :</b> {1}**"
-start_2 : "**❖ <b>нᴇʏ</b> {0}**\n❖ <b>ɴɪᴄᴇ ᴛᴏ ᴍᴇᴇᴛ ʏᴏᴜ !</b>\n•─┈─┈─┈─┈─┈─┈─┈─┈─┈─┈─┈─•\n❍ <b>ɪ ᴀᴍ {1}</b>\n❍ <b>ɪ ʜᴀᴠᴇ sᴘᴇᴄɪᴀʟ ꜰᴇᴀᴛᴜʀᴇs</b>\n•─┈─┈─┈─┈─┈─┈─┈─┈─┈─┈─┈─•\n❖ <b>ɪ ᴀᴍ ᴍᴏsᴛ ᴘᴏᴡᴇʀꜰᴜʟ ᴍᴜsɪᴄ ʙᴏᴛ</b>\n❖ <b> ɴᴏ ʟᴧɢ ɴᴏ ᴧᴅs ɴᴏ ᴘʀᴏᴍᴏ</b>\n❖ <b>ʙᴧsᴇᴅ ᴏɴ ɴᴇᴡ ᴠᴇʀsɪᴏɴ ᴏꜰ ᴘʏʀᴏɢʀᴧᴍ</b>\n❖ <b>ᴛᴧᴘ ᴛᴏ ʜᴇʟᴘ ᴧɴᴅ ᴄʜᴇᴄᴋ ᴍʏ ᴄᴏᴍᴍᴧɴᴅs</b>\n•─┈─┈─┈─┈─┈─┈─┈─┈─┈─┈─┈─•"
+start_2 : "**❖ <b>нᴇʏ</b> {0}**\n❖ <b>ɴɪᴄᴇ ᴛᴏ ᴍᴇᴇᴛ ʏᴏᴜ !</b>\n─────────•💌•─────────\n❍ <b>ɪ ᴀᴍ {1}</b>\n❍ <b>ɪ ʜᴀᴠᴇ sᴘᴇᴄɪᴀʟ ꜰᴇᴀᴛᴜʀᴇs</b>\n─────────•💌•─────────\n❖ <b>ɪ ᴀᴍ ᴍᴏsᴛ ᴘᴏᴡᴇʀꜰᴜʟ ᴍᴜsɪᴄ ʙᴏᴛ</b>\n❖ <b> ɴᴏ ʟᴧɢ ɴᴏ ᴧᴅs ɴᴏ ᴘʀᴏᴍᴏ</b>\n❖ <b>ʙᴧsᴇᴅ ᴏɴ ɴᴇᴡ ᴠᴇʀsɪᴏɴ ᴏꜰ ᴘʏʀᴏɢʀᴧᴍ</b>\n❖ <b>ᴛᴧᴘ ᴛᴏ ʜᴇʟᴘ ᴧɴᴅ ᴄʜᴇᴄᴋ ᴍʏ ᴄᴏᴍᴍᴧɴᴅs</b>\n─────────•💌•─────────"
 start_3 : "❖ ʜᴇʏ {0},\nᴛʜɪs ɪs {1}\n\nᴛʜᴀɴᴋs ғᴏʀ ᴀᴅᴅɪɴɢ ᴍᴇ ɪɴ {2}, {3} ᴄᴀɴ ɴᴏᴡ ᴩʟᴀʏ sᴏɴɢs ɪɴ ᴛʜɪs ᴄʜᴀᴛ."
 start_4 : "❖ <b>sᴜᴘᴇʀɢʀᴏᴜᴘ ɴᴇᴇᴅᴇᴅ</b> \n\nᴘʟᴇᴀsᴇ ᴄᴏɴᴠᴇʀᴛ ʏᴏᴜʀ <b>ɢʀᴏᴜᴘ</b> ᴛᴏ <b>sᴜᴘᴇʀɢʀᴏᴜᴘ</b> ᴀɴᴅ ᴛʜᴇɴ ᴀᴅᴅ ᴍᴇ ᴀɢᴀɪɴ.\n\n<b>ʜᴏᴡ ᴛᴏ ᴍᴀᴋᴇ sᴜᴘᴇʀɢʀᴏᴜᴘ ?</b>\n- ᴍᴀᴋᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ's ᴄʜᴀᴛ ʜɪsᴛᴏʀʏ <b>ᴠɪsɪʙʟᴇ</b> ᴏɴᴄᴇ."
 start_5 : "❖ <b>↝ ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴄʜᴀᴛ ↜</b>\n\nᴛʜɪs ᴄʜᴀᴛ ɪs ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴏɴ {0} ᴅᴀᴛᴀʙᴀsᴇ.\nʀᴇǫᴜᴇsᴛ ᴀ <a href={1}>sᴜᴅᴏ ᴜsᴇʀ</a> ᴛᴏ ᴜɴʙʟᴀᴄᴋʟɪsᴛ ʏᴏᴜʀ ᴄʜᴀᴛ ᴏʀ ᴠɪsɪᴛ <a href={2}>sᴜᴘᴘᴏʀᴛ ᴄʜᴀᴛ.</a>"
@@ -187,12 +187,12 @@ BACK_PAGE: "◁"
 S_B_1 : "ᴧᴅᴅ ᴍᴇ ʙᴧʙʏ"
 S_B_2 : "sᴜᴘᴘᴏʀᴛ"
 S_B_3 : "⊚ ᴧᴅᴅ ᴍᴇ ᴛᴏ ʏᴏᴜʀ ᴄʜᴧᴛ ⊚"
-S_B_4 : "⌯ ʜᴇʟᴘ ᴧɴᴅ ᴄᴏᴍᴍᴧɴᴅs ⌯"
-S_B_5 : "⌯ ᴏᴡɴᴇʀ ⌯"
-S_B_6 : "⌯ ᴜᴘᴅᴧᴛᴇ ⌯"
-S_B_7 : "⌯ sᴏᴜʀᴄᴇ  ⌯"
-S_B_8 : "⌯ ʏᴏᴜᴛᴜʙᴇ  ⌯"
-S_B_9 : "⌯ sᴜᴘᴘᴏʀᴛ ⌯"
+S_B_4 : "ʜᴇʟᴘ ᴧɴᴅ ᴄᴏᴍᴍᴧɴᴅs"
+S_B_5 : "ᴏᴡɴᴇʀ"
+S_B_6 : "ᴜᴘᴅᴧᴛᴇ"
+S_B_7 : "sᴏᴜʀᴄᴇ"
+S_B_8 : "ʏᴏᴜᴛᴜʙᴇ"
+S_B_9 : "sᴜᴘᴘᴏʀᴛ"
 
 H_B_1 : "ᴀᴅᴍɪɴ"
 H_B_2 : "ᴀᴜᴛʜ"
